--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 * text=auto !eol
 /apertium-pl-lv.pl-lv.dix -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
